--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,7 +19,8 @@
             </div>
         </div>
         <div class="row pb-4">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2 bg-white rounded-left">
+            <!-- Products image -->
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-1 bg-white rounded-left">
                 <div class="image-container center-block my-5">
                     {% if product.image %}
                     <a class="mx-auto" href="{{ product.image.url }}" target="_blank">
@@ -35,7 +36,8 @@
                 </div>
 
             </div>
-            <div class=" col-12 col-md-6 col-lg-4 bg-white rounded-right">
+            <!-- product Imformation and selectors -->
+            <div class=" col-12 col-md-6 bg-white rounded-right">
                 <div class="product-details-container mb-5 mt-md-5">
                     <h5 class="aw text-center mb-2">{{ product.name }}</h5>
                     <div class="row mt-4 justify-content-around">
@@ -57,10 +59,10 @@
                         <div>
                             {% with product.has_sizes as s %}
                             {% if s %}
-                            <div class="d-flex justify-content-center col-12 mt-3">
-                                <p class="aw mr-4 mt-1">Size:</p>
-                                <select class="form-control innerPadding rounded-10 w-50" name="product_size"
-                                    id='id_product_size'>
+                            <div class="col-12 mt-3">
+                                <p class="aw text-center mr-4 mt-1">Size:</p>
+                                <select class="form-control innerPadding_size rounded-10 w-50 mx-auto"
+                                    name="product_size" id='id_product_size'>
                                     <option class="aw" value="xs">XS</option>
                                     <option class="aw" value="s"> S</option>
                                     <option class="aw" value="m" selected> M</option>
@@ -71,7 +73,7 @@
                             {% endif %}
                             <div class="col-12 mx-auto">
                                 <p class="mt-3 aw text-center">Quantity:</p>
-                                <div class="form-group mx-auto w-75 aw">
+                                <div class="form-group mx-auto  w-50 aw">
                                     <div class="input-group ">
                                         <div class=" input-group-prepend">
                                             <button class=" decrement-qty btn btn-black minus-block rounded-10"
@@ -81,7 +83,7 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class=" form-control qty_input border border-secondary innerPadding"
+                                        <input class=" form-control qty_input border border-secondary innerPadding_qty"
                                             type="number" name="quantity" value="1" min="1" max="99"
                                             data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                         <div class="input-group-append ">
@@ -110,7 +112,8 @@
                     </form>
                 </div>
             </div>
-            <div class=" pl-4 col-lg-8 col-sm-12 mx-auto bg-white rounded-bottom">
+            <!-- Product Overview -->
+            <div class=" pl-4 col-lg-10 col-sm-12 mx-auto bg-white rounded-bottom">
                 <h4 class=" aw  rounded pb-2 text-bk pt-2 border-bottom">Product Overview</h4>
                 <p class="detail-p">{{ product.description|safe }}</p>
                 <hr>
