--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -61,8 +61,8 @@
                             {% if s %}
                             <div class="col-12 mt-3">
                                 <p class="aw text-center mr-4 mt-1">Size:</p>
-                                <select class="form-control innerPadding_size rounded-10 w-50 mx-auto"
-                                    name="product_size" id='id_product_size'>
+                                <select class="form-control innerPadding rounded-10 w-50 mx-auto" name="product_size"
+                                    id='id_product_size'>
                                     <option class="aw" value="xs">XS</option>
                                     <option class="aw" value="s"> S</option>
                                     <option class="aw" value="m" selected> M</option>
@@ -83,7 +83,7 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class=" form-control qty_input border border-secondary innerPadding_qty"
+                                        <input class=" form-control qty_input border border-secondary innerPadding"
                                             type="number" name="quantity" value="1" min="1" max="99"
                                             data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                         <div class="input-group-append ">
