added more wireframes and fixed a bug in subcrible btn

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -21,7 +21,7 @@
             </div>
             <div class="row">
                 <div class="col text-center mt-3">
-                    <h2 class="display-4 aw text-wht p-3">Products</h2>
+                    <h2 class="display-4 aw text-wht p-3">Focus Shop</h2>
 
                 </div>
             </div>
