Corrected spelling in css and add beta-overlay

--- a/blog/templates/blog/blog_categories.html
+++ b/blog/templates/blog/blog_categories.html
@@ -30,7 +30,7 @@
         <!-- Blog Entries Column -->
         <div class="col-md-8">
             {% if category_blogs %}
-            <div class="ovalpha-overlay mx-auto w-75 bg-black-a rounded-10">
+            <div class="alpha-overlay mx-auto w-75 bg-black-a rounded-10">
                 <h1 class="my-4 aw text-primary text-center 
                 {% if category  == 'Dieting' %} text-primary 
                 {% elif category  == 'Recovery' %} text-warning 
