--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row mx-4">
         <div class="col-md-8">
-            <div class="ovalpha-overlay">
+            <div class="alpha-overlay">
                 <h1 class="my-4 aw text-red text-center">Featured Blogs</h1>
             </div>
             <!-- Featured Blog feature carousel -->
@@ -63,7 +63,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <div class="ovalpha-overlay rounded-10">
+            <div class="alpha-overlay rounded-10">
                 <h2 class="my-4 aw text-primary text-center">Blogs</h2>
             </div>
             <!-- All other blogs -->
