--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -23,7 +23,7 @@
     <div class="row mx-4">
         <!-- Blog Entries Column -->
         <div class="col-md-8">
-            <div class="ovalpha-overlay rounded-10">
+            <div class="alpha-overlay rounded-10">
                 <h2 class="my-4 aw text-primary text-center">Searched Blogs</h2>
             </div>
 
