--- a/profiles/templates/profiles/authorsblogs.html
+++ b/profiles/templates/profiles/authorsblogs.html
@@ -3,7 +3,7 @@
 {% block head_title %} - Blog {% endblock head_title %}
 
 {% block content %}
-<div class="reg-pic ">
+<div class="reg_pic">
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="container center-block">
-        <div class="overlay">
+        <div class="beta-overlay">
             <div class="col p-4">
                 <h1 class="text-wht aw text-center">{{ page_user|title }}'s Blogs</h1>
                 <hr class="hr-gry">
