--- a/templates/socialaccount/authentication_error.html
+++ b/templates/socialaccount/authentication_error.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
 {% block content %}
-<div class="reg-pic ">
+<div class="reg_pic ">
     <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
