--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
 {% block content %}
-<div class="reg-pic ">
+<div class="reg_pic ">
     <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
