--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="reg-pic ">
+<div class="reg_pic ">
   <div class="container center-block">
     <div class="overlay">
       <div class="col p-4">
