--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -124,10 +124,10 @@
                                     <option value="price_desc" {% if sorting == 'price_desc' %}selected{% endif %}>
                                         Price
                                         (high to low)</option>
-                                    <!-- <option value="rating_asc" {% if sorting == 'rating_asc' %}selected{% endif %}>
+                                    <option value="rating_asc" {% if sorting == 'rating_asc' %}selected{% endif %}>
                                         Rating (low to high)</option>
                                     <option value="rating_desc" {% if sorting == 'rating_desc' %}selected{% endif %}>
-                                        Rating (high to low)</option> -->
+                                        Rating (high to low)</option>
                                     <option value="name_asc" {% if sorting == 'name_asc' %}selected{% endif %}>Name
                                         (A-Z)</option>
                                     <option value="name_desc" {% if sorting == 'name_desc' %}selected{% endif %}>
@@ -157,21 +157,21 @@
                         {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card w-100 h-100 fixed-shadow border-1">
-
-
                                 {% if product.in_stock == True %}
+
                                 {% if product.image %}
                                 <a class="ripple-surface mx-auto" href="{{ product.get_absolute_url }}">
                                     <img class="mx-auto mt-1 card-img-top shop-card-top-img img-fluid"
                                         src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
-
                                 {% else %}
                                 <a class="ripple-surface mx-auto" href="{{ product.get_absolute_url }}">
                                     <img class="mx-auto mt-1 card-img-top shop-card-top-img img-fluid"
-                                        src="{{ MEDIA_URL }}no-image.png" alt=" {{ product.name }}">
+                                        src="{{ MEDIA_URL }}no_image.png" alt="{{ product.name }}">
                                 </a>
+                                <!-- end product.image -->
                                 {% endif %}
+
                                 {% else %}
                                 <a class="mx-auto" href="">
                                     <img class="  ripple-surface  mx-auto card-img-top shop-card-top-img img-fluid"
@@ -180,11 +180,11 @@
                                 <div class="card-body pb-0">
                                     <p class="aw text-center">{{ product.name }}</p>
                                 </div>
-
+                                <!-- end in.stock -->
                                 {% endif %}
 
                                 {% if product.in_stock == True %}
-                                <div class="row ">
+                                <div class="row">
                                     <div class="col">
                                         <div class="card-body pb-0">
                                             <p class="aw text-center">{{ product.name }}</p>
@@ -210,9 +210,18 @@
                                                 </a>
                                             </p>
                                             {% endif %}
-                                            <p class=""><i
-                                                    class="fas text-ylw fa-star mr-2"></i>{{ product.rating_ave|floatformat:1  }}
+
+                                            {% if product.rating > 0 %}
+                                            <p class="">
+                                                <i class="fas text-ylw fa-star mr-1"></i>
+                                                {{ product.rating|floatformat:1  }}
                                             </p>
+                                            {% else %}
+                                            <small class="text-muted">
+                                                <i class="fas text-ylw fa-star mr-1"></i>
+                                                No Ratings
+                                            </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
