--- a/programs/templates/programs/workout_detail.html
+++ b/programs/templates/programs/workout_detail.html
@@ -21,7 +21,7 @@
                 <h1 class="text-wht aw text-center">{{ object.title }}</h1>
 
                 {% if object is not None %}
-                <p class="aw text-wht">{{ object.description }}</p>
+                <p class="text-wht">{{ object.description }}</p>
 
                 <video class="mx-auto video-width" controls>
                     <source src="{{ object.video_url }}" type="video/mp4">
