--- a/blog/templates/blog/blog_authors.html
+++ b/blog/templates/blog/blog_authors.html
@@ -30,12 +30,12 @@
                 <div class="row mt-1 text-wht">
                     <a class="text-wht" href="{{ blog.get_absolute_url }}" ">
                         <div class=" col-12"> {{ blog.title }}
-                        <span class=" aw ml-2 float-right{% if blog.category  == 'Dieting' %} text-primary 
+                        <span class=" aw ml-2 float-right {% if blog.category  == 'Dieting' %} text-primary 
                             {% elif blog.category  == 'Recovery' %} text-warning 
                             {% elif blog.category  == 'Endurance' %} text-info
                             {% elif blog.category  == 'Covid-19' %} text-danger 
                             {% elif blog.category  == 'Members' %} text-light 
-                            {% else %} text-success {% endif %}""><i class=" pl-2 pr-1 fad fa-tags"></i>
+                            {% else %} text-success {% endif %}"><i class=" pl-2 pr-1 fad fa-tags"></i>
                             {{ blog.category }}</span></div>
                 </a>
                 <div class="col-12"><small class="text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
