added css to landscape

--- a/blog/templates/blog/includes/blog_left.html
+++ b/blog/templates/blog/includes/blog_left.html
@@ -6,7 +6,7 @@
             {% elif blog.category  == 'Endurance' %} border border-info
             {% elif blog.category  == 'Covid-19' %} border border-danger 
             {% elif blog.category  == 'Members' %} border border-light 
-            {% else %} border border-success {% endif %}" style="max-width: 830px;">
+            {% else %} border border-success {% endif %} max_w_50">
         <div class="row no-gutters rounded-left">
 
             <div class="col-md-8 bg-black rounded-left">
