--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -77,7 +77,7 @@
                         {% elif blog.category  == 'Recovery' %} border border-warning 
                         {% elif blog.category  == 'Covid-19' %} border border-danger 
                         {% elif blog.category  == 'Endurance' %} border border-info
-                        {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                        {% else %} border border-success {% endif %} max_w_50">
                     <div class="row no-gutters rounded-left ">
                         <div class="col-md-4 bg-black rounded">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img "
@@ -118,7 +118,7 @@
                 {% elif blog.category  == 'Endurance' %} border border-info
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Members' %} border border-light 
-                {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                {% else %} border border-success {% endif %} max_w_50">
                     <div class="row no-gutters rounded-left">
 
                         <div class="col-md-8 bg-black rounded-left">
