--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -123,7 +123,7 @@
     <!--SubScribe banner-->
     <div {% if current_membership == "Professional" %} hidden {% else %}{% endif %} class="card my-5 py-5">
         <div class="row no-gutters align-items-center">
-            <div class="col-md-4 mx-auto" style="max-width: 300px;">
+            <div class="col-md-4 mx-auto max_w_22">
                 <img src="{% static 'images/womenblog-crop.jpg' %}" class="card-img bs-2" alt="Women in gym">
             </div>
 
