--- a/programs/templates/programs/program_list.html
+++ b/programs/templates/programs/program_list.html
@@ -27,7 +27,7 @@
             {% for program in programs  %}
             {% if not forloop.counter|divisibleby:2  %}
             <a href="{{ program.get_absolute_url }}" class="text-wht rounded fixed-shadow">
-                <div class="card  border border-light hover-shadow-col-lit rounded" style="max-width: 40rem;">
+                <div class="card  border border-light hover-shadow-col-lit rounded max_w_40">
                     <div class="row no-gutters  rounded">
                         <div class="col-md-4 bg-black rounded">
                             <img src="{{  program.thumbnail.url }}" class="card-img" alt="{{  program.title|title }}">
@@ -45,7 +45,7 @@
             <br>
             {% else %}
             <a href="{{ program.get_absolute_url }} " class="text-wht rounded fixed-shadow">
-                <div class="card border border-light hover-shadow-col-lit rounded" style="max-width: 40rem;">
+                <div class="card border border-light hover-shadow-col-lit rounded max_w_40">
                     <div class="row d-flex flex-row-reverse no-gutters text-wht rounded">
                         <div class="col-md-4 bg-black rounded">
                             <img src="{{ program.thumbnail.url }}" class="card-img" alt="{{  program.title|title }}">
