--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,42 +64,42 @@
     <div class="feature-container card-group">
         <div class="card ">
             <a href="{% url 'programs:list' %}" class="ripple-surface">
-                <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="BodyBuilder" />
+                <img src="{% static 'images/bidman.jpg' %}" class="custom_img card-img-top" alt="BodyBuilder" />
                 <div class="card-body">
                     <h4 class="card-title text-bk aw text-center">Training Programs</h4>
                     {% for program in programs %}
                     <p class="card-text d-block text-center mont_b text-bk">
                         {{ program }}</p>
+
                     {% endfor %}
                 </div>
             </a>
         </div>
-        {% if screen_size == True %}
-        <div class="card">
+
+        <div class="card d-block d-sm-none d-md-none">
             <a href="{% url 'blog:list' %}" class="ripple-surface">
-                <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="Lady in gym" />
+                <img src="{% static 'images/sven-mieke.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
             </a>
         </div>
-        {% else %}
-        <div class="card">
+
+
+        <div class="card d-none d-sm-block d-md-block">
             <a href="{% url 'blog:list' %}" class="ripple-surface">
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
-                <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="Lady in gym" />
+                <img src="{% static 'images/sven-mieke.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
             </a>
         </div>
-        {% endif %}
+
         <div class="card">
             <a href="{% url 'products:products' %}" class="ripple-surface">
-                <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="Thin man in pool" />
+                <img src="{% static 'images/pool-man.jpg' %}" class="custom_img card-img-top" alt="Thin man in pool" />
                 <div class="card-body">
-
                     <h4 class="card-title text-bk aw text-center">Focus Shop Categories</h4>
-
                     <div class="row">
                         {% for categorys in category%}
                         {% if not forloop.counter|divisibleby:2  %}
