--- a/programs/templates/programs/program_list.html
+++ b/programs/templates/programs/program_list.html
@@ -30,7 +30,8 @@
                 <div class="card  border border-light hover-shadow-col-lit rounded max_w_40">
                     <div class="row no-gutters  rounded">
                         <div class="col-md-4 bg-black rounded">
-                            <img src="{{  program.thumbnail.url }}" class="card-img" alt="{{  program.title|title }}">
+                            <img src="{{  program.thumbnail.url }}" class="card-img custom_img"
+                                alt="{{  program.title|title }}">
                         </div>
                         <div class="col-md-8 bg-black rounded">
                             <div class="card-body bg-black rounded">
@@ -48,7 +49,8 @@
                 <div class="card border border-light hover-shadow-col-lit rounded max_w_40">
                     <div class="row d-flex flex-row-reverse no-gutters text-wht rounded">
                         <div class="col-md-4 bg-black rounded">
-                            <img src="{{ program.thumbnail.url }}" class="card-img" alt="{{  program.title|title }}">
+                            <img src="{{ program.thumbnail.url }}" class="card-img custom_img"
+                                alt="{{  program.title|title }}">
                         </div>
                         <div class="col-md-8 bg-black rounded">
                             <div class="card-body bg-black rounded">
