--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -78,7 +78,7 @@
                 <div class="row d-flex justify-content-center">
                     {% if current_membership == False %}
                     <a class="ripple-surface  col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2"
-                        href="{% url 'account_signup' %}" role="button">Join Up</a>
+                        href="{% url 'account_signup' %}" role="button">Sign Up</a>
                     {% endif %}
 
                     {% if current_membership == "Free" %}
