--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
                 <div class=" col-12 d-flex d-flex justify-content-center no-gutters">
                     {% if current_membership == False %}
                     <a class="ripple-surface hover-shadow hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
-                        href="{% url 'account_signup' %}" role="button">Join Up</a>
+                        href="{% url 'account_signup' %}" role="button">Sign Up</a>
                     {% endif %}
 
                     {% if current_membership == "Free" %}
@@ -154,18 +154,30 @@
     </div>
     <!--Special offers-->
     <div id="secialOffers" class="container-fluid mt-4">
+
+        {% if sales_items %}
         <h2 class="aw active-size mt-3 text-center">SPECIAL OFFERS</h2>
         <h4 class="aw text-center mb-5">Look your Best. Feel even Better</h4>
+        {% else %}
+
+        {% endif %}
     </div>
 
     <div class="row row justify-content-center ">
         {% for product in sales_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
+                {% if product.image %}
                 <a class="ripple-surface   mx-auto" href="{% url 'products:product_detail' product.id %}">
                     <img class="mx-auto card-img-top shop-card-top-img img-fluid" src="{{ product.image.url }}"
                         alt="{{ product.name }}">
                 </a>
+                {% else %}
+                <a class="ripple-surface   mx-auto" href="{% url 'products:product_detail' product.id %}">
+                    <img class="mx-auto card-img-top shop-card-top-img img-fluid" src="{{ MEDIA_URL }}no_image.png"
+                        alt="{{ product.name }}">
+                </a>
+                {% endif %}
                 <div class="card-body pb-0">
                     <p class="text-center">{{ product.name }}</p>
                 </div>
@@ -173,12 +185,15 @@
                     <div class="row ">
                         <div class="col">
 
+                            {% if product.was_price != None and product.was_price > product.price %}
                             <p class="mb-0  aw">Was <span class="mont_b">$</span><s
                                     class="text-red">{{ product.was_price }}</s></p>
-
                             <p class="lead mb-0  aw">Now <span class="mont_b">$
                                 </span>{{ product.price }}</p>
-
+                            {% else %}
+                            <p class="lead mb-0  aw"><span class="mont_b">$
+                                </span>{{ product.price }}</p>
+                            {% endif %}
                             <i class="fas text-ylw fa-lg fa-star mr-1"></i>
 
                             {% if product.rating > 0 %}
@@ -192,6 +207,7 @@
                 </div>
             </div>
         </div>
+        {% empty %}
         {% endfor %}
     </div>
 
