--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -165,6 +165,7 @@
 
     <div class="row row justify-content-center ">
         {% for product in sales_items %}
+        {% if product.in_stock == True %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
                 {% if product.image %}
@@ -185,7 +186,7 @@
                     <div class="row ">
                         <div class="col">
 
-                            {% if product.was_price != None and product.was_price > product.price %}
+                            {% if product.was_price > product.price %}
                             <p class="mb-0  aw">Was <span class="mont_b">$</span><s
                                     class="text-red">{{ product.was_price }}</s></p>
                             <p class="lead mb-0  aw">Now <span class="mont_b">$
@@ -207,7 +208,10 @@
                 </div>
             </div>
         </div>
+        {% else %}
+        {% endif %}
         {% empty %}
+
         {% endfor %}
     </div>
 
