--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,4 +1,4 @@
-<div class="toast border border-success rounded-10" data-autohide="true" data-delay="5000" data-animation="true">
+<div class="toast border border-success rounded-10" data-autohide="false" data-delay="5000" data-animation="true">
 
     <div class="toast-header bg-black-a  text-wht">
         <h4 class="aw mx-auto text-grn"><i class=" fad fa-check-circle px-2"></i>Success!</h4>
