--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,7 +25,7 @@
 
                     {% if current_membership == "Free" %}
                     <a class="ripple-surface hover-shadow hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
-                        href="{% url 'memberships:select-membership' %}" role="button">Subcribe</a>
+                        href="{% url 'memberships:select_membership' %}" role="button">Subcribe</a>
                     {% endif %}
 
                     {% if current_membership == "Professional" %}
