Changed name to fix commently use names added testing md

--- a/memberships/templates/memberships/membership_list.html
+++ b/memberships/templates/memberships/membership_list.html
@@ -45,7 +45,7 @@
                 </ul>
                 <hr>
                 {% if object.membership_type != 'Free' %}
-                <form action="{% url 'memberships:select-membership' %}" method="POST">
+                <form action="{% url 'memberships:select_membership' %}" method="POST">
                     {% csrf_token %}
 
                     {% if object.membership_type != current_membership %}
