--- a/memberships/templates/memberships/membership_payment.html
+++ b/memberships/templates/memberships/membership_payment.html
@@ -10,7 +10,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'memberships:select-membership' %}">Memberships</a>
+                <a class="text-wht aw pl-2" href="{% url 'memberships:select_membership' %}">Memberships</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Payment</small>
             </div>
