--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -83,7 +83,7 @@
 
                     {% if current_membership == "Free" %}
                     <a class="ripple-surface col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2"
-                        href="{% url 'memberships:select-membership' %}" role="button">Subcribe</a>
+                        href="{% url 'memberships:select_membership' %}" role="button">Subcribe</a>
                     {% endif %}
 
                     {% if current_membership == "Professional" %}
