--- a/programs/templates/programs/workout_detail.html
+++ b/programs/templates/programs/workout_detail.html
@@ -38,7 +38,7 @@
                     <div class="col-12">
                         <span>
                             <a class=" my-2 w-100 text-wht aw px-4 btn btn-success"
-                                href="{% url 'memberships:select-membership' %}">Select Membership </a>
+                                href="{% url 'memberships:select_membership' %}">Select Membership </a>
                         </span>
                         <span>
                             <a class="my-2 w-100 text-wht aw px-4 btn btn-primary" href="{% url 'home' %}">Home</a>
