--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -6,7 +6,7 @@
             <img class="ml-3" src="{% static 'images/logo.png' %}" alt="FocusFitness">
         </div>
         <div class="col-md-6 col-sm-9 col-12 pt-3">
-            <p class="text-wht text-center">Be the First to recieve exciting news, Features, and special
+            <p class="mx-auto text-wht text-center">Be the First to recieve exciting news, Features, and special
                 offers from <span class="aw">Focus Fitness!</span>
             </p>
 
@@ -116,7 +116,9 @@
     <div class="row">
         <div class="col-12 feet-bg">
             <a class="feet-bg" href="https://github.com/Clinton-Davis" target="_blank">
-                <h6 class="aw text-center my-3">Web Design by Clinton Davis</h6>
+
+                <h6 class="aw text-center my-3"><img src="https://img.icons8.com/fluent/28/000000/github.png" />Web
+                    Design by Clinton Davis</h6>
             </a>
         </div>
     </div>
